--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
 }
-
+body {
+    font-family: 'Poppins', sans-serif;
+}
 .cabecalho {
     background-color: #424E61;
     color: white;
@@ -13,13 +15,13 @@
 }
 
 .cabecalho-imagem{
-    width: 20%;
+    width: 10%;
 }
 
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
-    font-size: 24px;
+    font-size: 16px;
 }
 
 .escola-imagem{
@@ -27,7 +29,7 @@
 }
 
 .escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
+    background-image: linear-gradient(#e3e5e7,#16CFF8);
     color:white;
     display: flex;
     justify-content: center;
@@ -38,6 +40,8 @@
 .escola-div-conteudo{
     width: 35%;
 }
+
+
 .escola-titulo{
     padding: 24px 0;
 }
@@ -57,4 +61,25 @@
 .estudante-div{
     text-align: center;
     padding: 16px 0;
+}
+
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+}
+
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+.rodape{
+    background-color: black;
+    text-align: center;
+}
+
+.rodape-imagem{
+    height: 60px;
+    padding: 12px 0;
+   
 }
