--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+ *{
     margin: 0;
     padding: 0;
 }
@@ -6,8 +7,8 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #424E61;
-    color: white;
+    background-color: #35ABE6;
+    color: #E3E635;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -17,11 +18,16 @@ body {
 .cabecalho-imagem{
     width: 10%;
 }
-
+.logo{
+    font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 85px;
+}
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
-    font-size: 16px;
+    font-size: 26px;
 }
 
 .escola-imagem{
@@ -29,7 +35,7 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#e3e5e7,#16CFF8);
+    background-image: linear-gradient(#35ABE6,#7EA3E6);
     color:white;
     display: flex;
     justify-content: center;
@@ -50,7 +56,7 @@ body {
     padding: 24px 0;
 }
 .estudante-imagem{
-    width: 120px;
+    width: 250px;
 }
 
 .estudante-icone{
@@ -67,12 +73,18 @@ body {
     text-align: center;
     padding: 50px 0;
 }
+.estudante-nome{
+    font-size: 25px;
+}
 
 .estudante-todos{
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
+.h3-preco{
+    font-size:35px ;
+}
 .rodape{
     background-color: black;
     text-align: center;
