--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 .cabecalho {
     background-color: #35ABE6;
-    color: #E3E635;
+    color: #4a70d8;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -36,7 +36,7 @@ body {
 
 .escola{
     background-image: linear-gradient(#35ABE6,#7EA3E6);
-    color:white;
+    color:rgb(250, 255, 254);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,6 +54,7 @@ body {
 
 .estudante{
     padding: 24px 0;
+    background-image: linear-gradient(#7EA3E6,#35ABE6);
 }
 .estudante-imagem{
     width: 250px;
@@ -86,12 +87,16 @@ body {
     font-size:35px ;
 }
 .rodape{
-    background-color: black;
+    background-color: rgb(37, 37, 37);
     text-align: center;
+    padding: 10px;
 }
 
 .rodape-imagem{
     height: 60px;
     padding: 12px 0;
    
+}
+h3{
+    color: aliceblue;
 }
